--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -56,3 +56,20 @@
 .links .link:hover {
     color: #ffc107;
 }
+
+.MuiAutocomplete {
+    min-width: 300px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1px solid #fff;
+    border-radius: 4px;
+}
+
+.iconColor {
+    color: #fff;
+}
+
+.MuiInputBaseRoot input{
+    color: #fff;
+}
