--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,58 +1,75 @@
 .header {
-  padding: 10px 40px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #222;
-  color: white;
+    padding: 10px 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #222;
+    color: white;
 }
 
 .logo {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .logo_image {
-  width: 60px;
+    width: 60px;
 }
 
 .logo_text {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 .links {
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-  gap: 40px;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    gap: 40px; /* Decreased the gap between links */
 }
 
 .links .link {
-  text-decoration: none;
-  color: #ffffff;
-  font-weight: bold;
-  position: relative;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+    position: relative;
 }
 
 .links .link:before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #ffc107;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #ffc107;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
 }
 
 .links .link:hover:before {
-  visibility: visible;
-  transform: scaleX(1);
+    visibility: visible;
+    transform: scaleX(1);
 }
 
 .links .link:hover {
-  color: #ffc107;
+    color: #ffc107;
+}
+
+.MuiAutocomplete {
+    min-width: 300px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1px solid #fff;
+    border-radius: 4px;
+}
+
+.iconColor {
+    color: #fff;
+}
+
+.MuiInputBaseRoot input {
+    color: #fff;
 }
