--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -38,6 +38,8 @@
     border-radius: 50%;
     margin-bottom: 20px;
     align-self: center;
+    object-fit: cover;
+    object-position: center center;
 }
 
 .githubLink {
