--- a/src/components/CompanyInfo/HomeInfo.module.css
+++ b/src/components/CompanyInfo/HomeInfo.module.css
@@ -28,21 +28,21 @@
   font-size: 48px;
   margin-bottom: 20px;
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .subHeading {
   font-size: 32px;
   margin-bottom: 10px;
   color: #555;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .section {
   margin-bottom: 20px;
 }
 
-p {
+/* p {
   font-size: 24px;
   line-height: 1.5;
   color: #333;
@@ -57,7 +57,7 @@ li {
   margin-bottom: 10px;
   color: #555;
   list-style: none;
-}
+} */
 
 .imageSection {
   text-align: center;
