--- a/src/components/HomeInfo/HomeInfo.module.css
+++ b/src/components/HomeInfo/HomeInfo.module.css
@@ -42,17 +42,17 @@
   margin-bottom: 20px;
 }
 
-p {
+.text {
   font-size: 24px;
   line-height: 1.5;
   color: #333;
 }
 
-ul {
+.list {
   padding-left: 20px;
 }
 
-li {
+.listItem {
   font-size: 24px;
   margin-bottom: 10px;
   color: #555;
