feat: add styles to app

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .main {
+  flex: 1 0 auto;
   margin: 20px 0 20px;
 }
