--- a/src/components/HomeInfo/HomeInfo.module.css
+++ b/src/components/HomeInfo/HomeInfo.module.css
@@ -5,12 +5,11 @@
   align-items: center;
   gap: 20px;
   padding: 20px;
-  background-image: linear-gradient(135deg, #ff6b6b, #556270);
 }
 
 .card {
   width: 900px;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -28,14 +27,14 @@
   font-size: 48px;
   margin-bottom: 20px;
   color: #fff;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .subHeading {
   font-size: 32px;
   margin-bottom: 10px;
-  color: #555;
-  font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
 }
 
 .section {
@@ -45,7 +44,7 @@
 .text {
   font-size: 24px;
   line-height: 1.5;
-  color: #333;
+  color: #c9c9c9;
 }
 
 .list {
@@ -55,7 +54,7 @@
 .listItem {
   font-size: 24px;
   margin-bottom: 10px;
-  color: #555;
+  color: #c9c9c9;
   list-style: none;
 }
 
