--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,7 @@
     color: white;
     padding: 40px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -16,7 +16,8 @@
 .developerCard {
     text-align: center;
     margin: 20px;
-    width: 200px;
+    width: 300px;
+    height: 300px;
     background-color: #1a1a1a;
     padding: 20px;
     border-radius: 10px;
@@ -24,7 +25,8 @@
     transition: transform 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 20px;
+    justify-content: center;
     align-items: center;
 }
 
@@ -42,9 +44,14 @@
     object-position: center center;
 }
 
+.developerName{
+    font-size: 24px;
+}
+
 .githubLink {
     color: #ffc107;
     text-decoration: none;
+    font-size: 24px;
     font-weight: bold;
     transition: color 0.3s ease-in-out;
 }
@@ -57,4 +64,5 @@
     text-align: center;
     color: #ffc107;
     font-weight: bold;
+    font-size: 32px;
 }
